# Roots

./: CMakeLists.txt  LineSearch.hpp  bisect.hpp  chord.hpp  combine.hpp  findrootresult.hpp  function_choice.hpp  input_interval.txt  input_interval.txt.0  integ.hpp  main.cpp  main.hpp  readfromfile.hpp  tangent.hpp
.cache/clangd/index/: main.cpp.4E425A3E8AD4FCC9.idx
Kursovik_AdvancedC/: IMG_20230610_182529.HEIC  IMG_20230610_182541.HEIC  IMG_20230610_182542.HEIC  Техническое задание.docx
lib/: CMakeLists.txt  bisect.hpp  chord.hpp  combine.hpp  command_line_parser.cpp  command_line_parser.hpp  findrootresult.hpp  function_choice.hpp  readfromfile.hpp  tangent.hpp
test/: CMakeLists.txt  test.cpp  test_chord.cpp  test_command_line_parser.cpp  test_tangent.cpp
